temporarily hide google play icon

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div id="downloads">
             <a href="https://apps.apple.com/app/id1549611796"><img src="imgs/app-store.svg"></a>
-            <a href="https://play.google.com/store/apps/details?id=me.hyliu.fluent_reader_lite"><img src="imgs/google-play.svg"></a>
+            <!-- <a href="https://play.google.com/store/apps/details?id=me.hyliu.fluent_reader_lite"><img src="imgs/google-play.svg"></a> -->
             <p>or</p>
             <a href="https://testflight.apple.com/join/9fwRtH8C">Join iOS TestFlight</a>
             <a href="https://github.com/yang991178/fluent-reader-lite/releases">Download Android APK</a>
