--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="icon" href="imgs/icon.png">
         <link rel="stylesheet" href="styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <meta name="apple-itunes-app" content="app-id=1549611796">
     </head>
     <body>
         <div id="header">
